--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -56,7 +56,7 @@
 	</div>
 <div id="attributepane">
 <div class="text">
-	<div title="Close" class="left-close returntext"><div class="c cf"><span>Return to the full network</span></div></div>	
+	<div title="Close" class="left-close returntext"><div><span>Return to the full network</span></div></div>	
 <div class="headertext">
 	<span>Information Pane</span>
 </div>	
