--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -8,11 +8,11 @@
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
-  <script src="/assets/jquery/jquery.min.js" type="text/javascript"></script>
-  <script src="/assets/sigma/sigma.min.js" type="text/javascript" language="javascript"></script>
-    <script src="/assets/sigma/sigma.fisheye.js" type="text/javascript" language="javascript"></script>
-    <script src="/assets/sigma/sigma.parseJson.js" type="text/javascript" language="javascript"></script>
-  <script src="/assets/fancybox/jquery.fancybox.pack.js" type="text/javascript" language="javascript"></script>
+  <script src="/assets/jquery.min.js" type="text/javascript"></script>
+  <script src="/assets/sigma.min.js" type="text/javascript" language="javascript"></script>
+    <script src="/assets/sigma.fisheye.js" type="text/javascript" language="javascript"></script>
+    <script src="/assets/sigma.parseJson.js" type="text/javascript" language="javascript"></script>
+  <script src="/assets/jquery.fancybox.pack.js" type="text/javascript" language="javascript"></script>
   <script src="/assets/main.js" type="text/javascript" language="javascript"></script>
 
 <!--[if IE]><script type="text/javascript" src="js/excanvas.js"></script><![endif]--> <!-- js/default.js -->
