--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -8,12 +8,13 @@
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
-  <script src="<%= asset_path('/assets/jquery.min.js') %>" type="text/javascript"></script>
-  <script src="<%= asset_path('/assets/sigma.min.js') %>" type="text/javascript"></script>
-  <script src="<%= asset_path('/assets/sigma.fisheye.js') %>" type="text/javascript"></script>
-  <script src="<%= asset_path('/assets/sigma.parseJson.js') %>" type="text/javascript"></script>
-  <script src="<%= asset_path('/assets/jquery.fancybox.pack.js') %>" type="text/javascript"></script>
-  <script src="<%= asset_path('/assets/main.js') %>" type="text/javascript"></script>
+<%= javascript_include_tag "jquery.min" %>
+<%= javascript_include_tag "sigma.min" %>
+<%= javascript_include_tag "sigma.fisheye" %>
+<%= javascript_include_tag "sigma.parseJson" %>
+
+<%= javascript_include_tag "main" %>
+
 
 
 <!--[if IE]><script type="text/javascript" src="js/excanvas.js"></script><![endif]--> <!-- js/default.js -->
