Added more javascripts to be precompiled

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -8,13 +8,16 @@
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
+
+<%= javascript_include_tag "jquery" %>
+<%= javascript_include_tag "jquery_ujs" %>
+<%= javascript_include_tag "turbolinks" %>
 <%= javascript_include_tag "jquery.min" %>
 <%= javascript_include_tag "sigma.min" %>
 <%= javascript_include_tag "sigma.fisheye" %>
 <%= javascript_include_tag "sigma.parseJson" %>
 
 <%= javascript_include_tag "main" %>
-
 
 
 <!--[if IE]><script type="text/javascript" src="js/excanvas.js"></script><![endif]--> <!-- js/default.js -->
