Added some more javascripts to be preloaded. Restored bootstrap from CDN

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -13,10 +13,12 @@
 <%= javascript_include_tag "jquery_ujs" %>
 <%= javascript_include_tag "turbolinks" %>
 <%= javascript_include_tag "jquery.min" %>
+<%= javascript_include_tag "_sigma.min" %>
 <%= javascript_include_tag "sigma.min" %>
 <%= javascript_include_tag "sigma.fisheye" %>
 <%= javascript_include_tag "sigma.parseJson" %>
-
+<%= javascript_include_tag "jquery.fancybox.pack" %>
+<%= javascript_include_tag "excanvas" %>
 <%= javascript_include_tag "main" %>
 
 
