Made change to info page

--- a/app/views/pages/info.html
+++ b/app/views/pages/info.html
@@ -66,7 +66,7 @@
         <p>This network visualization was initially created on 11/24/14. Most recent update: 11/24/14.</p>
         <p>Comments and questions can be directed to james dot k dot coleman at gmail dot com.</p>
         </br>
-        <p>The sources of the data presented here are the following early modern editions of letters:</p>
+        <p>The sources of the data presented here are the following early modern editions of collected letters:</p>
         <ul>
           <li>Aretino, Pietro. <i>Lettere di M. Pietro Aretino</i>. Vol. 1. Paris, 1609.</li>
           <li>Bembo, Pietro. <i>Delle lettere di M. Pietro Bembo</i>. Vol. 3. Venice, 1552.</li>
